--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "local-storage": "^2.0.0",
     "next": "11.1.2",
     "react": "17.0.2",
